deploy/rollout-blue-green.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollout-bluegreen
  namespace: go-hello
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: go-hello
  strategy:
    blueGreen:
      activeService: go-hello
      previewService: go-hello-preview
      autoPromotionEnabled: false
      previewReplicaCount: 1
  template:
    metadata:
      labels:
        app: go-hello
        backstage.io/kubernetes-id: go-hello
    spec:
      containers:
        - image: ghcr.io/kdwils/go-hello:main
          imagePullPolicy: Always
          name: go-hello-rollouts-demo
          ports:
            - containerPort: 8080
              name: http
