deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-hello
  namespace: go-hello
spec:
  selector:
    app: go-hello
  ports:
    - port: 80
      name: http
      targetPort: 8080
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: go-hello-preview
  namespace: go-hello
spec:
  selector:
    app: go-hello
  ports:
    - port: 80
      name: http
      targetPort: http
  type: ClusterIP
