deploy/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: go-hello-gateway
  namespace: go-hello
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - go-hello.int.kyledev.co
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - go-hello.int.kyledev.co
      tls:
        credentialName: go-hello-kyledev-tls-prod
        mode: SIMPLE
