deploy/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: rollout-destrule
  namespace: go-hello
spec:
  host: go-hello
  subsets:
    - name: stable
      labels:
        version: stable
    - name: canary
      labels:
        version: canary
