deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-hello
  namespace: "go-hello"
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: go-hello.int.kyledev.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-hello-preview
                port:
                  number: 80
  tls:
    - hosts:
        - go-hello.int.kyledev.co
      secretName: go-hello-kyledev-tls-prod
